--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 # pytest.ini
 [pytest]
-addopts = -s -v # Опция для автоматического добавления флагов
+#Опция для автоматического добавления флагов
+addopts = -s -v
 python_files = *_tests.py test_*.py   # Устанавливает правила для тестовых файлов
 python_classes = Test*               # Устанавливает правила для имен классов
 python_functions = test_*            # Устанавливает правила для имен функций
@@ -11,3 +12,4 @@ markers =
     users: Маркировка для тестов, связанных с пользователями.
     regression: Маркировка для регрессионных тестов.
     authentication: Маркировка для аутентификации.
+    files: Маркировка для тестов, связанных с файлами.
