--- a/pytest.ini
+++ b/pytest.ini
@@ -13,3 +13,4 @@ markers =
     regression: Маркировка для регрессионных тестов.
     authentication: Маркировка для аутентификации.
     files: Маркировка для тестов, связанных с файлами.
+    courses: Маркировка для тестов, связанных с курсами.
