--- a/pytest.ini
+++ b/pytest.ini
@@ -14,3 +14,4 @@ markers =
     authentication: Маркировка для аутентификации.
     files: Маркировка для тестов, связанных с файлами.
     courses: Маркировка для тестов, связанных с курсами.
+    exercises: Маркировка для тестов, связанных с exercises.
