+ added WAGGER_COVERAGE

--- a/.env
+++ b/.env
@@ -4,3 +4,18 @@ TEST_DATA.IMAGE_PNG_FILE="./testdata/files/hold.jpg"
 # URL, TIMEOUT это поля в модели HTTPClientConfig
 HTTP_CLIENT.URL="http://localhost:8000"
 HTTP_CLIENT.TIMEOUT=100
+
+
+# Добавляем переменную со списком сервисов для измерения покрытия
+SWAGGER_COVERAGE_SERVICES='[
+    {
+        "key": "Python_API",
+        "name": "API Course",
+        "tags": ["API", "COURSES"],
+        "repository": "https://github.com/CS-Magnat/Python_API",
+        "swagger_url": "http://localhost:8000/openapi.json"
+    }
+]'
+
+# Переименование HTML-файла отчета покрытия
+SWAGGER_COVERAGE_HTML_REPORT_FILE="./coverage.html"
