--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,101 +1,71 @@
-# Имя вашего workflow, которое будет отображаться в интерфейсе GitHub Actions
 name: API tests
 
-# Указываем, когда будет запускаться данный workflow
 on:
   push:
     branches:
-      - main  # Запускать workflow, когда будет сделан коммит в ветку main
+      - main
   pull_request:
     branches:
-      - main  # Запускать workflow, когда будет сделан pull request в ветку main
+      - main
 
-# Определяем все шаги, которые должны быть выполнены в рамках работы с тестами
 jobs:
   run-tests:
-    runs-on: ubuntu-latest  # Указываем, что тесты будут запускаться на последней версии Ubuntu
-
-    steps:
-      # 1. Шаг, который будет клонировать ваш репозиторий на машину GitHub Actions
-      - name: Check out repository
-        uses: actions/checkout@v4  # Используем GitHub Action для клонирования репозитория
-
-      # 2. Шаг для установки Python на виртуальной машине
-      - name: Set up Python
-        uses: actions/setup-python@v5  # Используем GitHub Action для установки Python
-        with:
-          python-version: '3.11'  # Устанавливаем версию Python 3.11 (можно заменить на другую версию)
-
-      # 3. Шаг для клонирования репозитория с тестовым сервером в рабочую среду
-      - name: Clone test server repository
-        run: git clone https://github.com/CS-Magnat/Python_API.git
-
-      # 4. Шаг для установки зависимостей для тестового сервера
-      - name: Install test server dependencies
-        run: pip install -r Python_API/requirements.txt
-
-      # 5. Шаг для запуска тестового сервера с необходимыми переменными окружения
-      - name: Start a test server
-        env:
-          APP_HOST: "http://localhost:8000"  # Устанавливаем адрес хоста сервера
-          DATABASE_URL: "sqlite+aiosqlite:///./local.db" # Устанавливаем URL локальной базы данных
-          JWT_ALGORITHM: "HS256" # Алгоритм для JWT токенов
-          JWT_SECRET_KEY: "Python_API-secret-key" # Секретный ключ для JWT
-          JWT_ACCESS_TOKEN_EXPIRE: 1800 # Время жизни access token (в секундах)
-          JWT_REFRESH_TOKEN_EXPIRE: 5184000 # Время жизни refresh token (в секундах)
-        run: uvicorn main:app --host 0.0.0.0 --port 8000 --app-dir ./Python_API & # Запускаем сервер с указанными переменными окружения
-
-      # 5.1. Ожидание готовности сервера
-      - name: Wait for server to be ready
-        run: |
-          timeout 30 bash -c 'until curl -s http://localhost:8000/docs > /dev/null; do sleep 1; done' || exit 1
-
-      # 6. Шаг для установки всех зависимостей проекта
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip  # Обновляем pip до последней версии
-          pip install -r requirements.txt  # Устанавливаем зависимости, указанные в requirements.txt
-
-      # 7. Шаг для запуска тестов с использованием pytest и генерации отчётов Allure
-      - name: Run API tests with pytest and generate Allure results
-        run: |
-          pytest -m regression --alluredir=allure-results --numprocesses 2  # Запускаем тесты, отмеченные как "regression", генерируем результаты для Allure
-
-      
-
-    # Новый job для публикации отчёта Allure
-  publish-report:
-    needs: [ run-tests ]  # Запускается только после успешного выполнения run-tests
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Шаг для клонирования репозитория
+
       - name: Check out repository
         uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13.2'
+
+      - name: Clone test server repository
+        run: git clone https://github.com/Nikita-Filonov/qa-automation-engineer-api-course.git
+
+      - name: Install test server dependencies
+        run: pip install -r qa-automation-engineer-api-course/requirements.txt
+
+      - name: Start a test server
+        env:
+          APP_HOST: "http://localhost:8000"
+          DATABASE_URL: "sqlite+aiosqlite:///./local.db"
+          JWT_ALGORITHM: "HS256"
+          JWT_SECRET_KEY: "qa-automation-engineer-api-course-secret-key"
+          JWT_ACCESS_TOKEN_EXPIRE: 1800
+          JWT_REFRESH_TOKEN_EXPIRE: 5184000
+        run: uvicorn main:app --host 0.0.0.0 --port 8000 --app-dir ./qa-automation-engineer-api-course &
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run API tests with pytest and generate Allure results
+        run: |
+          pytest -m regression --alluredir=allure-results --numprocesses=2
+
+      - name: Get Allure history
+        uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
 
-      # 2. Шаг для загрузки артефакта с результатами Allure
-      - name: Download Allure results
-        uses: actions/download-artifact@v4
-        with:
-          name: allure-results  # Имя артефакта, который мы сохранили в джобе run-tests
-          path: allure-results  # Путь, куда будут загружены результаты
-
-      # 3. Шаг для генерации и отображения отчёта Allure
       - name: Generates Allure Report with history
-        uses: simple-elf/allure-report-action@v1.12  # Используем готовое решение из GitHub Marketplace для генерации Allure отчёта
-        if: always()  # Этот шаг тоже всегда выполняется
+        uses: simple-elf/allure-report-action@v1.13
+        if: always()
         with:
-          allure_results: allure-results  # Указываем каталог с результатами тестов
-          allure_history: allure-history  # Указываем каталог для истории отчётов Allure
+          allure_results: allure-results
+          allure_history: allure-history
 
-      # 4. Шаг для деплоя отчёта Allure на GitHub Pages, чтобы его можно было просматривать в браузере
       - name: Deploy report to Github Pages
-        if: always()  # Выполняется всегда, независимо от успеха других шагов
-        uses: peaceiris/actions-gh-pages@v4  # Используем GitHub Action для публикации отчёта на GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # Токен для аутентификации на GitHub
-          publish_branch: gh-pages  # Указываем, что отчёт будет опубликован в ветке gh-pages
-          publish_dir: allure-history  # Указываем папку, которая будет опубликована на GitHub Pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
